--- a/profile.html
+++ b/profile.html
@@ -94,7 +94,7 @@
           </td>
         </tr>
       </table>
-      <h4>Projects</h4>
+      <h4>Good Bye!</h4>
       <hr>
       <table class="table table-hover">
         
