--- a/hire_me.html
+++ b/hire_me.html
@@ -49,7 +49,7 @@
     <hr>  
     <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-3">
-          <img style="margin: 10px" max-width="100%" width="100%" src="images/enosis.png">
+          <img style="margin: 10px" max-width="100%" width="100%" src="images/73511301.jpeg">
         </div> 
         <div class="col-lg-9 col-md-9 col-sm-9">
           <h4 style="font-size: 18px; font-weight: bold;">Sakhawat Hossain Rodro</h4>
