--- a/programming_contest.html
+++ b/programming_contest.html
@@ -26,13 +26,13 @@
         <a class="nav-link" href="https://s522-rgb.github.io">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About Me</a>
+        <a class="nav-link" href="#">Hire Me!</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">My Blog</a>
+        <a class="nav-link" href="#">My Projects and Works</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">I'm in Programming Contest</a>
+        <a class="nav-link" href="#">My Blog</a>
       </li>
       <li class="nav-item">
         
