--- a/hire_me.html
+++ b/hire_me.html
@@ -28,7 +28,7 @@
         <a class="nav-link" href="https://s522-rgb.github.io">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Hire Me!</a>
+        <a class="nav-link" href="https://s522-rgb.github.io/rodro/hire_me.html">Hire Me!</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">My Projects and Works</a>
