--- a/projects.html
+++ b/projects.html
@@ -8,16 +8,16 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css">
-  <title>Hello, world!</title>
+  <title>My Projects and Works!</title>
 
-  <link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon' />
+  <link rel='shortcut icon' href='images/favicon-image (1).png' type='image/x-icon' />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono&display=swap" rel="stylesheet">
 </head>
 <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-  <a class="navbar-brand" href="./index.html">Md. Emrul Chowdhury</a>
+  <a class="navbar-brand" href="https://s522-rgb.github.io">Sakhawat Hossain Rodro</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -25,46 +25,37 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="https://s522-rgb.github.io">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="competitive-programming-profile.html">Competitive Programming Profile</a>
+        <a class="nav-link" href="#">Hire Me!</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="problem-setting-profile.html">Problem Setting Profile</a>
+        <a class="nav-link" href="#">My Projects and Works</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="career-background.html">Career Background</a>
+        <a class="nav-link" href="#">My Blog</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="tools/index.html">Tools</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="tutorials/index.html">Tutorials</a>
-      </li>
+      
     </ul>
   </div>
 </nav>
 
 <body style="position: relative; min-height: 100vh">
   <div class="container" style="margin-top: 10px; padding-bottom: 200px;    ">
-    <h1>Hello World!</h1>
-    <p>I'm Md. Emrul Chowdhury, a software engineer. Recently graduated from Department of Computer Science &
-      Engineering, Metropolitan University. I'm currently working at Enosis Solutions as a software engineer.</p>
-    <p>After starting my undergraduate program, I started to focus on competitive programming. I participated in 15+
-      national level programming contests with result of being at top 13 in the rank list. I did regular contests on
-      various online judges including Codeforces, Codechef, Hackerrank etc. In last year of my undergraduate, I focused on software development little bit, developed few applications using MVC Framework.</p>
-    <p>In case, please contact with me by mailing at <a
-        href="mailto:emrul.chy@gmail.com">emrul.chy@gmail.com</a>.</p>
+    <h1>My Projects and Works</h1>
+    <h3>Daily azad-A Responsible Blogger Theme</h3>
+    <p>Daily azad is theme for Blogger (A Google Service).You can make your Websites using this theme.<a href="#">About this Project</a></p>
+
   </div>
 
   <footer class="footer" >
     <div class="container">
-      <a style="float: right; margin-top: 12px; text-decoration: none;" href="mailto:emrul.chy@gmail.com" class="btn btn-social-icon btn-email"><span class="fa fa-envelope"></span></a>
-      <a style="float: right; margin-top: 12px; text-decoration: none;" target="_blank" href="https://github.com/emrul-chy" class="btn btn-social-icon btn-github"><span class="fa fa-github"></span></a>
-      <a style="float: right; margin-top: 12px; text-decoration: none;" target="_blank" href="https://www.linkedin.com/in/emrul-cse/" class="btn btn-social-icon btn-linkedin"><span class="fa fa-linkedin"></span></a>
-      <a style="float: right; margin-top: 12px; text-decoration: none;" target="_blank" href="https://www.facebook.com/emrul.cse" class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span></a>
-      <span class="text-muted"> Ⓒ 2020 emrul-chy.github.io | By Md. Emrul Chowdhury</i><span>
+      <a style="float: right; margin-top: 12px; text-decoration: none;" href="mailto:sakhawatniguary@gmail.com" class="btn btn-social-icon btn-email"><span class="fa fa-envelope"></span></a>
+      <a style="float: right; margin-top: 12px; text-decoration: none;" target="_blank" href="#" class="btn btn-social-icon btn-github"><span class="fa fa-github"></span></a>
+      <a style="float: right; margin-top: 12px; text-decoration: none;" target="_blank" href="#" class="btn btn-social-icon btn-linkedin"><span class="fa fa-linkedin"></span></a>
+      <a style="float: right; margin-top: 12px; text-decoration: none;" target="_blank" href="#" class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span></a>
+      <span class="text-muted"> Ⓒ 2021 Rodro</i><span>
     </div>
   </footer>
 
