--- a/projects.html
+++ b/projects.html
@@ -28,10 +28,10 @@
         <a class="nav-link" href="https://s522-rgb.github.io">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Hire Me!</a>
+        <a class="nav-link" href="hire_me.html">Hire Me!</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">My Projects and Works</a>
+        <a class="nav-link" href="projects.html">My Projects and Works</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">My Blog</a>
