--- a/programming_contest.html
+++ b/programming_contest.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono&display=swap" rel="stylesheet">
 </head>
 <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-  <a class="navbar-brand" href="./index.html">Sakhawat Hossain Rodro</a>
+  <a class="navbar-brand" href="https://s522-rgb.github.io">Sakhawat Hossain Rodro</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
         <a class="nav-link" href="https://s522-rgb.github.io/rodro/hire_me.html">Hire Me!</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">My Projects and Works</a>
+        <a class="nav-link" href="projects.html">My Projects and Works</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">My Blog</a>
