--- a/hire_me.html
+++ b/hire_me.html
@@ -31,7 +31,7 @@
         <a class="nav-link" href="https://s522-rgb.github.io/rodro/hire_me.html">Hire Me!</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">My Projects and Works</a>
+        <a class="nav-link" href="projects.html">My Projects and Works</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="#">My Blog</a>
