programming_contest.html

--- a/programming_contest.html
+++ b/programming_contest.html
@@ -64,13 +64,13 @@
         
       </tbody>
     </table>
-    <h3>Authored Problems</h3>
+    <h3>I'm in Programming Contest!</h3>
     <table id="problem" style="margin-bottom: 30px; margin-top: 20px" class="table table-bordered table-hover table-striped">
       <thead>
         <tr>
           <th id="table-td">#</th>
-          <th id="table-td">Problem Title</th>
-          <th id="table-td">Origin</th>
+          <th id="table-td">Online Judge</th>
+          <th id="table-td">Programming Solved</th>
         </tr>
       </thead>
       <tbody>
@@ -82,7 +82,7 @@
             <a href="#">Dimik OJ</a>
           </td>
           <td id="table-td">
-            Dimik OJ
+            11
           </td>
         </tr>
         <tr>
@@ -93,7 +93,7 @@
             <a href="#">Dimik OJ</a>
           </td>
           <td id="table-td">
-            Dimik OJ
+            11
           </td>
         </tr>
         
