programming_contest.html

--- a/programming_contest.html
+++ b/programming_contest.html
@@ -79,7 +79,7 @@
             1
           </td>
           <td id="table-td">
-            <a href="#">Dimik OJ</a>
+            <a href="https://dimikoj.com/users/9681/sakha21">Dimik OJ</a>
           </td>
           <td id="table-td">
             11
@@ -90,7 +90,7 @@
             2
           </td>
           <td id="table-td">
-            <a href="#">Dimik OJ</a>
+            <a href="https://dimikoj.com/users/9681/sakha21">Dimik OJ</a>
           </td>
           <td id="table-td">
             11
