--- a/ppsolution.html
+++ b/ppsolution.html
@@ -46,7 +46,7 @@
 
 <body style="position: relative; min-height: 100vh">
   <div class="container" style="margin-top: 20px; padding-bottom: 200px;    ">
-    <h4 style="font-size: 19px">I have solved some programming problems  <b>you can see solution in here</b>please always try to solve programming problems.So,you can will wine!</h4>
+    <h4 style="font-size: 19px">I have solved some programming problems  <b>you can see solution in here </b>please always try to solve programming problems.So,you can will win!</h4>
 
     <table style="margin-bottom: 30px; margin-top: 20px" class="table table-bordered table-hover table-striped">
       <tbody>
