--- a/hire_me.html
+++ b/hire_me.html
@@ -13,7 +13,8 @@
   <link rel='shortcut icon' href='images/favicon-image (1).png' type='image/x-icon' />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com"> <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Source+Code+Pro:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Public+Sans:wght@500&display=swap" rel="stylesheet">
 </head>
 <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
   <a class="navbar-brand" href="https://s522-rgb.github.io">Sakhawat Hossain Rodro</a>
