--- a/ppsolution.html
+++ b/ppsolution.html
@@ -11,8 +11,8 @@
   <title>Programming Problems and Solutions</title>
   <link rel='shortcut icon' href='images/favicon-image (1).png' type='image/x-icon' />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700&amp;display=swap" rel="stylesheet">  
+ <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono&display=swap" rel="stylesheet"> 
 </head>
 <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
   <a class="navbar-brand" href="https://s522-rgb.github.io">Sakhawat Hossain Rodro</a>
