--- a/new.html
+++ b/new.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css">
-  <title>Competitive Programming Profile</title>
+  <title>Career Background</title>
 
   <link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon' />
 
@@ -20,21 +20,21 @@
   <a class="navbar-brand" href="./index.html">Md. Emrul Chowdhury</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"></i><span>
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" href="./index.html">Home</a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Competitive Programming Profile</a>
+      <li class="nav-item">
+        <a class="nav-link" href="competitive-programming-profile.html">Competitive Programming Profile</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="problem-setting-profile.html">Problem Setting Profile</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="career-background.html">Career Background</a>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Career Background</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="tools/index.html">Tools</a>
@@ -47,201 +47,142 @@
 </nav>
 
 <body style="position: relative; min-height: 100vh">
-  <div class="container" style="margin-top: 10px; padding-bottom: 200px;    ">
+  <div class="container" style="margin-top: 20px; padding-bottom: 200px;    ">
+    <h4>Work Experience</h4>
+    <hr>  
+    <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-3">
+          <img style="margin: 10px" max-width="100%" width="100%" src="images/enosis.png">
+        </div> 
+        <div class="col-lg-9 col-md-9 col-sm-9">
+          <h4 style="font-size: 18px; font-weight: bold;">Software Engineer</h4>
+          <h5><a href="http://www.enosisbd.com" target="_blank">Enosis Solutions</a></h5>
+          <h6><i>February 2020 - Present</i></h6>
+          <h6>Working on backend team of a big data project.
 
-    <ul class="nav nav-tabs" id="myTab" role="tablist" style="margin-bottom: 20px">
-      <li class="nav-item">
-        <a class="nav-link active" id="online-tab" data-toggle="tab" href="#online" role="tab" aria-controls="online"
-          aria-selected="true"><h5 style="font-size: 19px"><b>ICPC, NCPC & IUPC Participation</b></h5></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="onsite-tab" data-toggle="tab" href="#onsite" role="tab" aria-controls="onsite"
-          aria-selected="false"><h5 style="font-size: 19px"><b>Online Judges Profile</b></h5></a>
-      </li>
-    </ul>
-    <div class="tab-content" id="myTabContent">
-      <div class="tab-pane fade show active" id="online" role="tabpanel" aria-labelledby="online-tab">
-        <h5 style="font-size: 18px">I participated in 15+ national level programming contest. Result of some contests are in the following:</h5>
-        <table style="margin-bottom: 30px" class="table table-bordered table-hover table-striped">
-          <thead>
-            <tr>
-              <th id="table-td">#</th>
-              <th id="table-td">Contest Name</th>
-              <th id="table-td">Rank</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td id="table-td">
-                1
-              </td>
-              <td id="table-td">
-                BUP Inter-University Programming Contest 2019
-              </td>
-              <td id="table-td">
-                13
-              </td>
-            </tr>
-            <tr>
-              <td id="table-td">
-                2
-              </td>
-              <td id="table-td">
-                LU Inter University Programming Contest 2017
-              </td>
-              <td id="table-td">
-                13
-              </td>
-            </tr>
-            <tr>
-              <td id="table-td">
-                3
-              </td>
-              <td id="table-td">
-                SUB Inter-University Programming Contest 2019
-              </td>
-              <td id="table-td">
-                23
-              </td>
-            </tr>
-            <tr>
-              <td id="table-td">
-                4
-              </td>
-              <td id="table-td">
-                SUST Inter-University Programming Contest 2019
-              </td>
-              <td id="table-td">
-                24
-              </td>
-            </tr>
-            <tr>
-              <td id="table-td">
-                5
-              </td>
-              <td id="table-td">
-                LU CSE Carnival Inter-University Programming Contest 2019
-              </td>
-              <td id="table-td">
-                26
-              </td>
-            </tr>
-            <tr>
-              <td id="table-td">
-                6
-              </td>
-              <td id="table-td">
-                ICPC Dhaka Regional 2019
-              </td>
-              <td id="table-td">
-                30
-              </td>
-            </tr>
-            <tr>
-              <td id="table-td">
-                7
-              </td>
-              <td id="table-td">
-                IUBAT NCPC 2018 
-              </td>
-              <td id="table-td">
-                34
-              </td>
-            </tr>
-            <tr>
-              <td id="table-td">
-                8
-              </td>
-              <td id="table-td">
-                LU National ICT Fest Programming Contest 2018
-              </td>
-              <td id="table-td">
-                38
-              </td>
-            </tr>
-            <tr>
-              <td id="table-td">
-                9
-              </td>
-              <td id="table-td">
-                SUST CSE Carnival 2017
-              </td>
-              <td id="table-td">
-                43
-              </td>
-            </tr>
-            <tr>
-              <td id="table-td">
-                10
-              </td>
-              <td id="table-td">
-                BUET CSE Fest 2019 Inter-University Programming Contest
-              </td>
-              <td id="table-td">
-                49
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="tab-pane fade" id="onsite" role="tabpanel" aria-labelledby="onsite-tab">
-        <div class="row" style="align-content: center; display: flex; justify-content: center; padding: 0px; margin: 0px">
-          <div class="card col-lg-5" style="padding: 0px; margin: 0px; width: 96%; margin-left: 10px; margin-right:10px; margin-bottom:20px;">
-            <h5 class="card-header">Codeforces</h5>
-            <div class="card-body">
-              <h5 class="card-title">Max Rating <b style="color: blue;">1835</b></h5>
-              <p class="card-text">
-                <li>Participated in 175+ rated contests.</li>
-                <li>Solved 2000+ problems.</li>
-                <li>Best Div. 2 rank <b>57</b> in Round #578.</li>
-              </p>
-              <a href="https://codeforces.com/profile/Mr_Emrul" target="_blank" class="btn btn-primary btn-sm">Codeforces Profile</a>
-            </div>
-          </div>
-          <div class="card col-lg-5" style="padding: 0px; margin: 0px; width: 96%; margin-left: 10px; margin-right: 10px; margin-bottom:20px;">
-            <h5 class="card-header">Codechef</h5>
-            <div class="card-body">
-              <h5 class="card-title">Max Rating <b style="color: orange;">2031</b></h5>
-              <p class="card-text">
-                <li>Ranked 10th globally in February Cook-Off 2019 Div. 2</li>
-                <li>Gained Codechef Goodies.</li>
-                <li>Won prize in Snackdown 2017.</li>
-              </p>
-              <a href="https://www.codechef.com/users/emrul_mu" target="_blank" class="btn btn-primary btn-sm">Codechef Profile</a>
-            </div>
-          </div>
-          <div class="card col-lg-5" style="padding: 0px; margin: 0px; width: 96%; margin-left: 10px; margin-right:10px; margin-bottom:20px;">
-            <h5 class="card-header">Hackerrank</h5>
-            <div class="card-body">
-              <h5 class="card-title">Max Rating <b style="color: purple;">2052</b></h5>
-              <a href="https://www.hackerrank.com/Mr_Emrul" target="_blank" class="btn btn-primary btn-sm">Hackerrank Profile</a>
-            </div>
-          </div>
-          <div class="card col-lg-5" style="padding: 0px; margin: 0px; width: 96%; margin-left: 10px; margin-right: 10px; margin-bottom:20px;">
-            <h5 class="card-header">UVa</h5>
-            <div class="card-body">
-              <h5 class="card-title">Solved <b>500+</b> Problems</h5>
-              <a href="https://uhunt.onlinejudge.org/id/825070" target="_blank" class="btn btn-primary btn-sm">UVa Profile</a>
-            </div>
-          </div>
+    Key responsibilities are:
+    <ul>
+    <li>Deploy necessary changes</li>
+    <li>Finding the root case of bugs of backend project</li>
+  </ul>
 
-          <div class="card col-lg-5" style="padding: 0px; margin: 0px; width: 96%; margin-left: 10px; margin-right: 10px; margin-bottom:20px;">
-            <h5 class="card-header">LightOJ</h5>
-            <div class="card-body">
-              <h5 class="card-title">Solved <b>200+</b> Problems</h5>
-              <a href="#" class="btn btn-primary btn-sm">LightOJ ID: 37748</a>
-            </div>
-          </div>
-
-          <div class="card col-lg-5" style="padding: 0px; margin: 0px; width: 96%; margin-left: 10px; margin-right: 10px; margin-bottom:20px;">
-            <h5 class="card-header">Toph</h5>
-            <div class="card-body">
-              <h5 class="card-title">Solved <b>400+</b> Problems</h5>
-              <a href="https://toph.co/u/emrul_mu" target="_blank" class="btn btn-primary btn-sm">Toph Profile</a>
-            </div>
-          </div>
+Technologies:
+<ul>
+<li>Java Spring</li>
+<li>Apache Kafka</li>
+<li>Apache Ignite</li>
+</ul>
+          </h6>
         </div>
-      </div>
+    </div>
+    <h4>Education</h4>
+    <hr>
+    <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-3">
+          <img style="margin: 10px" max-width="100%" width="100%" src="images/metro.svg">
+        </div> 
+        <div class="col-lg-9 col-md-9 col-sm-9">
+          <h4 style="font-size: 18px; font-weight: bold;">B.Sc. (Engg.) in Computer Science & Engineering</h4>
+          <h5><a href="https://www.metrouni.edu.bd" target="_blank">Metropolitan University</a></h5>
+          <h6><i>January 2016 - February 2020</i></h6>
+        </div>
+    </div>
+    <h4>Skills</h4>
+    <hr>  
+    <div class="row" style="margin: 0px; padding: 0px">
+      <table class="table table-hover"> 
+        <tr>
+          <td style="font-size: 16px; font-weight: bold;">Languages:</td>
+          <td>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">C</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">C++</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">PHP</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">C#</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">Java</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">Scala</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">Python</div>
+          </td>
+        </tr>
+        <tr>
+          <td style="font-size: 16px; font-weight: bold;">Web Technologies:</td>
+          <td>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-secondary btn-sm active">HTML</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-secondary btn-sm active">CSS</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-secondary btn-sm active">Javascript</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-secondary btn-sm active">JQuery</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-secondary btn-sm active">Bootstrap</div>
+          </td>
+        </tr>
+        <tr>
+          <td style="font-size: 16px; font-weight: bold;">Frameworks:</td>
+          <td>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-primary btn-sm active">Spring</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-primary btn-sm active">Codeigniter</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-primary btn-sm active">.NET Core MVC</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-primary btn-sm active">Angular</div>
+          </td>
+        </tr>
+        <tr>
+          <td style="font-size: 16px; font-weight: bold;">Database:</td>
+          <td>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-success btn-sm active">MySQL</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-success btn-sm active">SQL Server</div>
+          </td>
+        </tr>
+        <tr>
+          <td style="font-size: 16px; font-weight: bold;">Others:</td>
+          <td>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-warning btn-sm active">Apache Kafka</div>
+            <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-warning btn-sm active">Apache Ignite</div>
+          </td>
+        </tr>
+      </table>
+      <h4>Projects</h4>
+      <hr>
+      <table class="table table-hover">
+        <tr>
+          <td><h5 style="font-weight: bold;">Metropolitan University CPC Tool <alert style="font-weight: normal; padding: 5px" class="alert alert-success">Co-author: Mohammed Majharul Isalm Rafat</alert></h5>
+
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">MySQL</div>
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">Javascript</div>
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">Codeigniter</div>
+            <span><i>A web application for Metropolitan University Competitive Programming Community</i><span>
+            <li>Live tracking of programmers progress including current rating, solved problems, performance in tasks.</li>
+            <li>Custom leaderboard based on performances.</li>
+            <li>Assigning tasks by trainer. Task's leaderboard automatically rendered by submission scrapping.</li>
+            <li>Creating teams by coach with live chat system.</li>
+            <li>Creating groups by trainer for training.</li>
+            <li>Registration system for intra contests.</li>
+            <li>Participation history in national contests.</li>
+            <li>Blog for the programmers.</li>
+          </td>
+        </tr>
+        <tr>
+          <td><h5 style="font-weight: bold;">Amar Dokan</h5>
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">MySQL</div>
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">Javascript</div>
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">Codeigniter</div>
+            <span><i>An e-commerce site for grocery shop with full features.</i><span>
+          </td>
+        </tr>
+
+        <tr>
+          <td><h5 style="font-weight: bold;">Durjoy</h5>
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">MySQL</div>
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">PHP</div>
+            <span><i>A web application for University Admission Aid with online
+mock exam system.</i><span>
+          </td>
+        </tr>
+        <tr>
+          <td><h5 style="font-weight: bold;">ProgSchool</h5>
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">MySQL</div>
+            <div style="float: right; margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">Java</div>
+            <span><i>A desktop application for learning programming with
+community and platform for knowledge sharing.</i><span>
+          </td>
+        </tr>
+      </table>
     </div>
   </div>
 
