--- a/profile.html
+++ b/profile.html
@@ -45,25 +45,7 @@
     </ul>
   </div>
 </nav>
-
-<body style="position: relative; min-height: 100vh">
-  <div class="container" style="margin-top: 20px; padding-bottom: 200px;    ">
-    <h4>About Me</h4>
-    <hr>  
-    <div class="row">
-        <div class="col-lg-3 col-md-3 col-sm-3">
-          <img style="margin: 10px" max-width="100%" width="100%" src="images/IMG_20201231_180911_993.jpg">
-        </div> 
-        <h6>I'm currently reading in Computer Technology at Dhaka Polytechnic Institute, Bangladesh.I'm born in Narsingdi, Bangladesh and I grew up in Mymensingh, Bangladesh.</h6>
-
-    
-
-
-<ul>
-<li></li>
-<li></li>
-<li></li>
-</ul>
+   
           </h6>
         </div>
     </div>
@@ -71,11 +53,11 @@
     <hr>
     <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-3">
-          <img style="margin: 10px" max-width="100%" width="100%" src="#">
+          <img style="margin: 10px" max-width="100%" width="100%" src="/img/IMG_20201231_180911_993.jpg">
         </div> 
         <div class="col-lg-9 col-md-9 col-sm-9">
           <h4 style="font-size: 18px; font-weight: bold;"></h4>
-          <h5><a href="#" target="_blank"></a></h5>
+          <h5>I am currently reading in Computer Technology at Dhaka Polytechnic Institute, Bangladesh.I'm born in Narsingdi, Bangladesh and I grew up in Mymensingh, Bangladesh.</h5>
           <h6><i></i></h6>
         </div>
     </div>
