--- a/profile.html
+++ b/profile.html
@@ -45,7 +45,35 @@
     </ul>
   </div>
 </nav>
+<body style="position: relative; min-height: 100vh">
+  <div class="container" style="margin-top: 20px; padding-bottom: 200px;    ">
+    <h4>Work Experience</h4>
+    <hr>  
+    <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-3">
+          <img style="margin: 10px" max-width="100%" width="100%" src="images/enosis.png">
+        </div> 
+        <div class="col-lg-9 col-md-9 col-sm-9">
+          <h4 style="font-size: 18px; font-weight: bold;">Software Engineer</h4>
+          <h5><a href="http://www.enosisbd.com" target="_blank">Enosis Solutions</a></h5>
+          <h6><i>February 2020 - Present</i></h6>
+          <h6>Working on backend team of a big data project.
 
+    Key responsibilities are:
+    <ul>
+    <li>Deploy necessary changes</li>
+    <li>Finding the root case of bugs of backend project</li>
+  </ul>
+
+Technologies:
+<ul>
+<li>Java Spring</li>
+<li>Apache Kafka</li>
+<li>Apache Ignite</li>
+</ul>
+          </h6>
+        </div>
+    </div>
 
     <h4>Education</h4>
     <hr>
