--- a/profile.html
+++ b/profile.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css">
-  <title>Career Background</title>
+  <title>About Me</title>
 
-  <link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon' />
+  <link rel='shortcut icon' href='images/favicon-image (1).png' type='image/x-icon' />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700&amp;display=swap" rel="stylesheet">
@@ -28,20 +28,15 @@
         <a class="nav-link" href="./index.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Hire Me</a>
+        <a class="nav-link" href="https://s522-rgb.github.io/rodro/hire_me.html">Hire Me</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">My Projects and Works</a>
+        <a class="nav-link" href="https://s522-rgb.github.io/rodro/projects.html">My Projects and Works</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="#">My Blog</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="tools/index.html">Tools</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="tutorials/index.html">Tutorials</a>
-      </li>
+      
     </ul>
   </div>
 </nav>
@@ -56,7 +51,7 @@
     <hr>
     <div class="row">
         <div class="col-lg-3 col-md-3 col-sm-3">
-          <img style="margin: 10px" max-width="100%" width="100%" src="images/metro.svg">
+          <img style="margin: 10px" max-width="100%" width="100%" src="images/IMG_20201231_180911_993.jpg">
         </div> 
         <div class="col-lg-9 col-md-9 col-sm-9">
           <h4 style="font-size: 18px; font-weight: bold;">Sakhawat Hossain Rodro</h4>
@@ -64,7 +59,7 @@
           <h6><i></i></h6>
         </div>
     </div>
-    <h4>Skills</h4>
+    <h4>My Skills</h4>
     <hr>  
     <div class="row" style="margin: 0px; padding: 0px">
       <table class="table table-hover"> 
@@ -101,6 +96,7 @@
       </table>
     </div>
   </div>
+<h5>Good Bye!</h5>
 
   <footer class="footer" >
     <div class="container">
