--- a/profile.html
+++ b/profile.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono&display=swap" rel="stylesheet">
 </head>
 <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-  <a class="navbar-brand" href="./index.html">Sakhawat Hossain Rodro</a>
+  <a class="navbar-brand" href="https://s522-rgb.github.io">Sakhawat Hossain Rodro</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></i><span>
@@ -25,7 +25,7 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="./index.html">Home</a>
+        <a class="nav-link" href="https://s522-rgb.github.io">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="https://s522-rgb.github.io/rodro/hire_me.html">Hire Me</a>
@@ -104,11 +104,11 @@
         </div>
   <footer class="footer" >
     <div class="container">
-      <a style="float: right; margin-top: 12px; text-decoration: none;" href="mailto:emrul.chy@gmail.com" class="btn btn-social-icon btn-email"><span class="fa fa-envelope"></span></a>
-      <a style="float: right; margin-top: 12px; text-decoration: none;" target="_blank" href="https://github.com/emrul-chy" class="btn btn-social-icon btn-github"><span class="fa fa-github"></span></a>
-      <a style="float: right; margin-top: 12px; text-decoration: none;" target="_blank" href="https://www.linkedin.com/in/emrul-cse/" class="btn btn-social-icon btn-linkedin"><span class="fa fa-linkedin"></span></a>
-      <a style="float: right; margin-top: 12px; text-decoration: none;" target="_blank" href="https://www.facebook.com/emrul.cse" class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span></a>
-      <span class="text-muted"> Ⓒ 2020 emrul-chy.github.io | By Md. Emrul Chowdhury</i><span>
+      <a style="float: right; margin-top: 12px; text-decoration: none;" href="mailto:sakhawatniguary@gmail.com" class="btn btn-social-icon btn-email"><span class="fa fa-envelope"></span></a>
+      <a style="float: right; margin-top: 12px; text-decoration: none;" target="_blank" href="#" class="btn btn-social-icon btn-github"><span class="fa fa-github"></span></a>
+      <a style="float: right; margin-top: 12px; text-decoration: none;" target="_blank" href="#" class="btn btn-social-icon btn-linkedin"><span class="fa fa-linkedin"></span></a>
+      <a style="float: right; margin-top: 12px; text-decoration: none;" target="_blank" href="#" class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span></a>
+      <span class="text-muted"> © 2021 Rodro</i><span>
     </div>
   </footer>
 
