--- a/profile.html
+++ b/profile.html
@@ -63,7 +63,7 @@
     <div class="row" style="margin: 0px; padding: 0px">
       <table class="table table-hover"> 
         <tr>
-          <td style="font-size: 16px; font-weight: bold;">Languages:</td>
+          <td style="font-size: 16px; font-weight: bold;">Programming Languages:</td>
           <td>
                         <div style="margin-right: 5px; margin-bottom: 5px" class="btn btn-info btn-sm active">Python</div>
           </td>
