--- a/profile.html
+++ b/profile.html
@@ -58,6 +58,9 @@
           <h6><i></i></h6>
         </div>
     </div>
+<body style="position: relative; min-height: 10vh">
+  <div class="container" style="margin-top: 20px; padding-bottom: 20px;    ">
+    
     <h4>My Skills</h4>
     <hr>  
     <div class="row" style="margin: 0px; padding: 0px">
