--- a/ppsolution.html
+++ b/ppsolution.html
@@ -68,7 +68,7 @@
     <table id="problem" style="margin-bottom: 30px; margin-top: 20px" class="table table-bordered table-hover table-striped">
       <thead>
         <tr>
-          <th id="table-td">#</th>
+          <th id="table-td">No.</th>
           <th id="table-td">Problem Title</th>
           <th id="table-td">Date</th>
         </tr>
@@ -79,7 +79,7 @@
             1
           </td>
           <td id="table-td">
-            <a href="#">Print a Multiplication Table of a Number</a>
+            <a href="https://s522-rgb.github.io/solution/">Print a Multiplication Table of a Number</a>
           </td>
           <td id="table-td">
             03/02/2021
@@ -90,7 +90,7 @@
             2
           </td>
           <td id="table-td">
-            <a href="#">Print Even and Odd</a>
+            <a href="https://s522-rgb.github.io/solution/">Print Even and Odd</a>
           </td>
           <td id="table-td">
             06/02/2021
