--- a/ppsolution.html
+++ b/ppsolution.html
@@ -64,7 +64,7 @@
         
       </tbody>
     </table>
-    <h3>Authored Problems</h3>
+    <h3>Programming Problems</h3>
     <table id="problem" style="margin-bottom: 30px; margin-top: 20px" class="table table-bordered table-hover table-striped">
       <thead>
         <tr>
