daily-azad.html

--- a/daily-azad.html
+++ b/daily-azad.html
@@ -46,9 +46,9 @@
     <h1>Project Name : Daily Azad</h1>
     <h3>Project Description :</h3>
     <p>Daily azad is a theme for Blogger (A Google Service).You can make your Websites using this theme.
-This template is very easy to work without touch to code. Daily Azad Blogger Template is 100% responsive and drag-drop to build your own home design. Daily Azad Magazine Blogger Template is a Magazine Responsive Blogger Template, it is clean and compatible with many devices, It’s perfect for creating your magazine or newspaper blog using Blogspot, no need to coding as it is very customizable.
-
-The detailed documentation is always a good source to help you to set up all the widgets and parameters in this theme. It comes with built-in support for SEO using rich snippets and HTML5, your site will rank better in search engines. Get Magpress today for an awesome blog! Daily Azad Magazine blogger template is designed with a flexible approach that lets you easily change the color skin, font size, and other customization options easily from the official blogger template designer. Daily Azad not only excels at front-end usability and user experience, but the admin back-end is very easy to use.</p>
+This template is very easy to work without touch to code. Daily Azad Blogger Template is 100% responsive and drag-drop to build your own home design. Daily Azad Magazine Blogger Template is a Magazine Responsive Blogger Template, it is clean and compatible with many devices, It’s perfect for creating your magazine or newspaper blog using Blogspot, no need to coding as it is very customizable.<a href="https://daily-azad-sbtemplates.blogspot.com">View demo</p>
+<img src="images/FB_IMG_1613971892364.jpg" alt="Project : Daily azad" style="width:240px;height:120px;">
+<p>The detailed documentation is always a good source to help you to set up all the widgets and parameters in this theme. It comes with built-in support for SEO using rich snippets and HTML5, your site will rank better in search engines. Get Magpress today for an awesome blog! Daily Azad Magazine blogger template is designed with a flexible approach that lets you easily change the color skin, font size, and other customization options easily from the official blogger template designer. Daily Azad not only excels at front-end usability and user experience, but the admin back-end is very easy to use.</p>
   </div>
 
   <footer class="footer" >
