--- a/ppsolution.html
+++ b/ppsolution.html
@@ -79,7 +79,7 @@
             1
           </td>
           <td id="table-td">
-            <a href="https://s522-rgb.github.io/solution/">Print a Multiplication Table of a Number</a>
+            <a href="problem-1.html">Print a Multiplication Table of a Number</a>
           </td>
           <td id="table-td">
             03/02/2021
