--- a/problem-1.html
+++ b/problem-1.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css">
-  <title>My Projects and Works!</title>
+  <title>Programming Problem: Print a Multiplication Table of a Number </title>
 
   <link rel='shortcut icon' href='images/favicon-image (1).png' type='image/x-icon' />
 
