--- a/ppsolution.html
+++ b/ppsolution.html
@@ -90,7 +90,7 @@
             2
           </td>
           <td id="table-td">
-            <a href="https://s522-rgb.github.io/solution/">Print Even and Odd</a>
+            <a href="problem-2.html">Print Even and Odd</a>
           </td>
           <td id="table-td">
             06/02/2021
