--- a/daily-azad.html
+++ b/daily-azad.html
@@ -48,8 +48,7 @@
     <p>Daily azad is a theme for Blogger (A Google Service).You can make your Websites using this theme.
 This template is very easy to work without touch to code. Daily Azad Blogger Template is 100% responsive and drag-drop to build your own home design. Daily Azad Magazine Blogger Template is a Magazine Responsive Blogger Template, it is clean and compatible with many devices, It’s perfect for creating your magazine or newspaper blog using Blogspot, no need to coding as it is very customizable.<a href="https://daily-azad-sbtemplates.blogspot.com">View demo</a></p>
 <img src="images/FB_IMG_1613971892364.jpg" alt="Project : Daily azad" style="width:240px;height:120px;">
-<body style="position: relative; min-height: 100vh">
-  
+<h1>Documentary</h1>
 
 <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="320" height="240" type="text/html" src="https://www.youtube.com/embed/OHpG6T6vDxs?autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0"></iframe><div style="position: absolute;bottom: 10px;left: 0;right: 0;margin-left: auto;margin-right: auto;color: #000;text-align: center;"><small style="line-height: 1.8;font-size: 0px;background: #fff;">  </small></div><style>.newst{position:relative;text-align:right;height:420px;width:520px;} #gmap_canvas img{max-width:none!important;background:none!important}</style></div><br />
  </div>
