--- a/programming_contest.html
+++ b/programming_contest.html
@@ -32,7 +32,7 @@
         <a class="nav-link" href="projects.html">My Projects and Works</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">My Blog</a>
+        <a class="nav-link" href="https://www.rodro.site">My Blog</a>
       </li>
       <li class="nav-item">
         
