--- a/nirpata.html
+++ b/nirpata.html
@@ -47,7 +47,7 @@
     <h3>Project Description :</h3>
     <p>NirPata is a theme for Blogger (A Google Service).You can make your Community Blog or Forum using this theme.
 This template is very easy to work without touch to code.NirPata Blogger Template is totally free and drag-drop to build your own home design.NirPata Blogger Template is a Blog Blogger Template, it is clean and compatible with many devices, It’s perfect for creating your community blog platform using Blogspot/Blogger, no need to coding as it is very customizable.<a href="https://nirpatabd.blogspot.com">View demo</a></p>
-<img src="images/download (10) (1).png" alt="Project : Daily azad" style="width:240px;height:120px;">
+<img src="images/download (10) (1).png" alt="Project : NirPata" style="width:240px;height:120px;">
 
 
 
